Install key for deployment

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -20,12 +20,12 @@ jobs:
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
 
-    - name: Deploy the site via rsync
-      uses: burnett01/rsync-deployments@4.1
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
       with:
-        switches: -avzr
-        path: /_site:/srv/jekyll/_site
-        remote_path: /home/waf/public_html
-        remote_user: ${{ secrets.DEPLOY_USER }}
-        remote_host: ${{ secrets.DEPLOY_HOST }}
-        remote_key: ${{ secrets.DEPLOY_KEY }}
+        key: ${{ secrets.DEPLOY_KEY }}
+        known_hosts: ${{ secrets.DEPLOY_HOST }}
+
+    - name: Deploy via rsync
+      run: |
+        rsync ${{ github.workspace }}/_site ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:${{ secrets.DEPLOY_PATH }}
