--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,8 +3,6 @@ name: Jekyll site CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -24,7 +22,7 @@ jobs:
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.DEPLOY_KEY }}
-        known_hosts: ${{ secrets.DEPLOY_HOST }}
+        known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy via rsync
       run: |
