--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ collections:
     output: true
   visualizations:
     output: true
+  tools:
+    output: true
     # permalink: /:collection/:name/
 
 collections_dir: collections
